--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,8 @@
     grid-row-gap: 20px;
 }
 .box{
-    /* background-color:#333; */
     padding:20px;
     border-radius:10px;
-    /* color:#fff; */
     display:flex;
     align-items:center;
     justify-content:center;
@@ -41,4 +39,29 @@
 }
 .fraction span.bar {
     display: none;
+}
+
+.matrix {
+    position: relative;
+}
+.matrix:before, .matrix:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    border: 1px solid #000;
+    width: 6px;
+    height: 100%;
+}
+.matrix:before {
+    left: -6px;
+    border-right: 0px;
+}
+.matrix:after {
+    right: -6px;
+    border-left: 0px;
+}
+.matrix td {
+    padding: 5px;    
+    text-align: center;
+    color:black;
 }
